--- a/desktop.ini
+++ b/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 head_manichi_red_m.obj=@head_manichi_red_m.obj,0
 face_3t_m2wTextr.obj=@face_3t_m2wTextr.obj,0
+Fake_Tumor1Circo2_m.obj=@Fake_Tumor1Circo2_m.obj,0
